--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -13,7 +12,8 @@
       crossorigin="anonymous"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css" />
     <title>Bootstrap Webpage</title>
   </head>
@@ -58,12 +58,12 @@
       </video>
       <div class="full-screen-video-content"><img src="/img/logo/welcome.png" alt="welcome" style="width: 50vw;" class="img-fluid"></div>
     </div>
-    <div id="about" class="container-fluid">
+    <div class="container-fluid">
       <div class="row bg-img2 d-flex justify-content-center">
-        <div class="card">
-          <h1 class="display-4 text-white">C.O.V.I.D. 19 PROTOCOL</h1>
-          <p class="lead text-white">In order to provide the safest possible tattoo experience for both our clients and artists, we have implemented several new procedures.<br>
-1. We will be strictly appointment only and have 1 person per practitioner with plenty of distance between stations.
+        <div class="card text-center">
+          <h1 class="display-4 text-light">C.O.V.I.D. 19 PROTOCOL</h1>
+          <p class="lead text-light fw-bold">In order to provide the safest possible tattoo experience for both our clients and artists, we have implemented several new procedures.<br>
+1. We will be strictly appointment only and have 1 Person per practitioner with plenty of distance between stations.
 Unfortunately, this means you may not bring anyone with you to your appointment. We may still be able to accommodate
 same-day appointments depending on our schedule. Please just give us a call first.<br>
 2. We will require everyone to wear a mask at all times while in the studio. We encourage everyone to consider purchasing
@@ -84,7 +84,7 @@ Staff at Five Ten Tattoo
         </div>
       </div>
     </div>
-    <div class="container-fluid ">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-md-4 col-sm-4">
         <img src="/img/ace/Ace_Banner.jpg" alt="ace_thumbnail" class="artist-banner-thumbnail img-fluid">
@@ -94,107 +94,52 @@ Staff at Five Ten Tattoo
         </div>
         <div class="col-md-4 col-sm-4">
           <img src="img/banner/Artist_Selector2.png" alt="artist-selector" class="img-fluid"></div>
-          <div class="col-md-4 col-sm-4">
+          <div class="col-md-4">
             <img src="/img/banner/AdrianProfile (1).jpg" width="100%" height="100%" lt="adrian_thumbnail" class="artist-banner-thumbnail img-fluid">
            <button type="button" class="btn btn-primary home-button">
             Adrian Lazaro
           </button>
         </div>
       </div>
+      <div class="container-fluid">
+    <div id="demo" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="carousel-caption">
+                    <p>This was the best tattoo experience I’ve ever had! Not only are the artists extremely talented, but they also make sure that you’re as comfortable as you can possibly be while getting your tattoo done. Shout out to the artist who totally made my experience amazing, ...Totally worth all the pain</p> <img src="https://i.imgur.com/lE89Aey.jpg">
+                    <div id="image-caption">Chris Mahomes</div>
+                    <h2 id="stars"><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i></h2>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="carousel-caption">
+                  <p>I am not exaggerating when I say that I get at least one compliment a day... This tattoo is beyond vibrant, and downright shocks people that it is real. I’ve had people gather around me to stare at it and ooo and ahh countless times. It’s kind of nuts how often it happens!!</p> <img src="https://i.imgur.com/QptVdsp.jpg" class="img-fluid">
+                    <div id="image-caption">Kevin Groves</div>
+                    <h2 id="stars"><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i></h2>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="carousel-caption">
+                    <p>There is Zero attitude at Five Ten. The shop is clean and inviting. let me start by saying that everyone at this shop is So talented... I would trust anyone here to ink me.</p> <img src="https://i.imgur.com/jQWThIn.jpg" class="img-fluid">
+                    <div id="image-caption">Henry Field</div>
+                    <h2 id="stars"><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i></h2>
+                </div>
+            </div>
+        </div> <a class="carousel-control-prev" href="#demo" data-slide="prev"> <i class='fas fa-arrow-left'></i> </a> <a class="carousel-control-next" href="#demo" data-slide="next"> <i class='fas fa-arrow-right'></i> </a>
     </div>
-
-    <!-- <div class="container-fluid">
-      <div class="row">
-        <div class="col-4 carousel-ace-4">
-          <button type="button" class="btn btn-primary home-button">
-            Large button
-          </button>
-        </div>
-        <div class="col-8 carousel-ace-8">
-          <div
-            id="carouselExampleIndicators"
-            class="carousel slide"
-            data-bs-ride="carousel"
-          >
-            <div class="carousel-indicators">
-              <button
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide-to="0"
-                class="active"
-                aria-current="true"
-                aria-label="Slide 1"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide-to="1"
-                aria-label="Slide 2"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide-to="2"
-                aria-label="Slide 3"
-              ></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                  <img
-                    src="img/ace/crying_mary.jpg"
-                    class="carousel-images"
-                    alt="..."
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="img/ace/mary_jesus.jpg"
-                  class="carousel-images"
-                  alt="..."
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="img/ace/mytattoo.jpg"
-                  class="carousel-images"
-                  alt="..."
-                />
-              </div>
-            </div>
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide="prev"
-            >
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide="next"
-            >
-              <span
-                class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
-
+</div>
+  
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
   </body>
   </body>
 </html>
