--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
     </nav>
     <div id="form"></div>
     <div class="container">
-      <b><span style="letter-spacing: 3.5px; ">CONTACT US</span><br><br></br>
+      <b><span style="letter-spacing: 3.5px;">CONTACT US</span><br><br></br>
       <span class="Address">ADDRESS<br>
       555 Melrose Ave, Los Angeles, CA 90029<br>
       Tel: 555-555-5555 Fax: 555-555-5556<br>
@@ -97,9 +97,13 @@
               <input type="submit" value="Submit" />
               </form><br>
     </div>
-  </div>
-    
-  <div class="footer fixed-bottom d-flex justify-content-center">
+    <div class="row">
+      <div class="row">
+      <div class="col map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3301.9983794421773!2d-118.11707818406519!3d34.14638358058036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c3537eb165d7%3A0x705dc360a5e054f2!2s23%20N%20Meridith%20Ave%2C%20Pasadena%2C%20CA%2091106!5e0!3m2!1sen!2sus!4v1606949288122!5m2!1sen!2sus" width="650" height="650" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      </div>
+    </div>
+    <div class="footer fixed-bottom d-flex justify-content-center">
       <div class="lineicon lni-32 p-2">
       <i class="lni lni-instagram-filled"></i>
       <i class="lni lni-facebook-filled"></i>
